--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,22 +1,33 @@
 <div class="homepage-container">
-<div class="popn-logo-large">
-  <div class="popn-background">
-    <p class="popn-logo-text">Popn</p>
+  <div class="popn-logo-large">
+    <div class="popn-background">
+      <p class="popn-logo-text">Popn</p>
+    </div>
+  </div>
+  <div class="hero-container">
+    <div>
+      <img
+        class="hero-image"
+        src="https://www.offlimit.co.za/wp-content/gallery/fanta_funometer/fant-12.jpg"
+        alt="Fanta event"
+      />
+    </div>
+    <div class="hero-content">
+      <div class="hero-title">
+        <h2>Fanta Festival</h2>
+        <ul>
+          <li><a class="button" href="#">Check it Out!</a></li>
+        </ul>
+      </div>
+      <div class="hero-description">
+        <p>Don't you wanna Fanta?</p>
+      </div>
+    </div>
   </div>
 </div>
-<div class="hero-container">
-  <div>
-    <img class="hero-image" src="https://www.offlimit.co.za/wp-content/gallery/fanta_funometer/fant-12.jpg" alt="Fanta event">
- </div>
-  <div class="hero-content">
-    <div class="hero-title">
-      <h2>Fanta Festival</h2>
-      <ul>
-        <li><a class="button" href="#">Check it Out!</a></li>
-      </ul>
-    </div>
-    <div class="hero-description">
-      <p>Don't you wanna Fanta?</p>
-    </div>
-  </div>
+<div class="homepage-text">
+  <p>
+    Find fun things to do, curated and reviewed by people like you, all through
+    the power of crowdsourcing.
+  </p>
 </div>
