--- a/src/app/find-whats-popn/find-whats-popn.component.html
+++ b/src/app/find-whats-popn/find-whats-popn.component.html
@@ -1,22 +1,14 @@
 <div class="centered">
-<div class="find-whats-popn">
-<p *ngIf="error; else activityListing" class="error">There was a problem getting the product list.</p>
-  <ng-template #activityListing>
-  <ul #activityListing class="listings">
-    <li *ngFor="let activity of activityList">
-        <app-activity-listing
-          [id]="activity.id"
-          [imageUrl]="activity.imageUrl"
-          [name]="activity.name"
-          [description]="activity.description"
-          [hourBeginning]="activity.hourBeginning"
-          [hourEnding]="activity.hourEnding"
-          [dateBeginning]="activity.dateBeginning"
-          [dateEnding]="activity.dateEnding">
-        </app-activity-listing>
-
-    </li>
-  </ul>
-</ng-template>
-</div>
+  <div class="find-whats-popn">
+    <p *ngIf="error; else activityListing" class="error">
+      There was a problem getting the product list.
+    </p>
+    <ng-template #activityListing>
+      <ul #activityListing class="listings">
+        <li *ngFor="let activity of activityList">
+          <app-activity-listing [activity]="activity"></app-activity-listing>
+        </li>
+      </ul>
+    </ng-template>
+  </div>
 </div>
