--- a/src/app/activity-page-view/activity-page-view.component.html
+++ b/src/app/activity-page-view/activity-page-view.component.html
@@ -20,10 +20,7 @@
               >
             </li>
             <li>
-              <a
-                href="https://{{ activity.websiteUrl }}"
-                class="button"
-                target="_blank"
+              <a href="{{ activity.websiteUrl }}" class="button" target="_blank"
                 >Website</a
               >
             </li>
