--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<main>
-  <router-outlet></router-outlet>
+<main class="background">
+  <div class="side-padding">
+    <router-outlet></router-outlet>
+  </div>
 </main>
-
-
