--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -14,6 +14,7 @@
   background-color: hsl(211, 100%, 97%);
   border-radius: 6px;
   padding: 12px;
+  line-height: 25px;
 }
 
 .homepage-container {
@@ -39,6 +40,7 @@
   padding: 6px;
   background-color: hsl(211, 100%, 97%);
   height: 100%;
+  line-height: 25px;
 }
 
 .hero-title {
