--- a/src/app/info-icon/info-icon.component.html
+++ b/src/app/info-icon/info-icon.component.html
@@ -1,3 +1,5 @@
-<li>
-  <span class="material-symbols-outlined">child_friendly</span>
-</li>
+<ul>
+  <li *ngFor="let badge of activity?.badgesDto">
+    <span class="material-symbols-outlined">{{ badge.name }}</span>
+  </li>
+</ul>
