--- a/src/app/add-whats-popn/add-whats-popn.component.html
+++ b/src/app/add-whats-popn/add-whats-popn.component.html
@@ -92,6 +92,55 @@
             /><br />
           </div>
         </div>
+
+        <legend>Choose Info Badges:</legend>
+        <div>
+          <label for="isChildFriendly">Child-Friendly</label>
+          <input
+            ngModel
+            type="checkbox"
+            name="isChildFriendly"
+            id="isChildFriendly"
+          />
+        </div>
+        <div>
+          <label for="isAdmission">Admission Fee</label>
+          <input ngModel type="checkbox" name="isAdmission" id="isAdmission" />
+        </div>
+        <div>
+          <label for="isNoAlcohol">Alcohol Prohibited</label>
+          <input ngModel type="checkbox" name="isNoAlcohol" id="isNoAlcohol" />
+        </div>
+        <div>
+          <label for="isPetFriendly">Pet-Friendly</label>
+          <input
+            ngModel
+            type="checkbox"
+            name="isPetFriendly"
+            id="isPetFriendly"
+          />
+        </div>
+        <div>
+          <label for="isParking">Local Parking</label>
+          <input ngModel type="checkbox" name="isParking" id="isParking" />
+        </div>
+        <div>
+          <label for="isAccessible">Accessible</label>
+          <input
+            ngModel
+            type="checkbox"
+            name="isAccessible"
+            id="isAccessible"
+          />
+        </div>
+        <div>
+          <label for="isWifi">Free Wifi</label>
+          <input ngModel type="checkbox" name="isWifi" id="isWifi" />
+        </div>
+        <div>
+          <label for="isRsvp">RSVP Only</label>
+          <input ngModel type="checkbox" name="isRsvp" id="isRsvp" />
+        </div>
       </div>
       <input class="button" type="submit" value="Submit" />
     </form>
