--- a/src/app/activity-listing/activity-listing.component.css
+++ b/src/app/activity-listing/activity-listing.component.css
@@ -1,6 +1,6 @@
 .listing {
   display: flex;
-  width: 600px;
+  width: 660px;
   height: 179px;
   position: relative;
   border-radius: 6px;
@@ -14,7 +14,6 @@
 .listing-title {
   margin-top: 4px;
   padding-bottom: 5px;
-  border-bottom: 1px solid hsl(211, 100%, 5%);
 }
 
 .listing-title ul {
@@ -29,16 +28,19 @@
   font-size: 24px;
   font-weight: 500;
   margin-bottom: 15px;
-  color: hsl(211, 100%, 5%);
+  color: hsl(211, 100%, 9%);
 }
 
 .listing-metadata {
+  border-top: 1px solid hsl(211, 25%, 53%);
   margin-bottom: 14px;
+  padding-top: 12px;
   font-size: 15px;
   position: absolute;
   bottom: 0;
   text-align: left;
   color: hsl(211, 100%, 5%);
+  width: 48%;
   line-height: 20px;
 }
 
