--- a/src/app/add-whats-popn/add-whats-popn.component.css
+++ b/src/app/add-whats-popn/add-whats-popn.component.css
@@ -78,3 +78,11 @@ img {
   border-radius: 6px;
   border: 2px solid hsl(211, 50%, 85%);
 }
+
+fieldset input {
+  margin: 0.4rem;
+}
+
+fieldset {
+  flex-flow: nowrap;
+}
