add badges to activity page view

--- a/src/app/activity-page-view/activity-page-view.component.css
+++ b/src/app/activity-page-view/activity-page-view.component.css
@@ -1,21 +1,23 @@
 .event {
+  margin-right: auto;
+  margin-left: auto;
   display: flex;
-  max-width: 90%;
   position: relative;
   border-radius: 6px;
   background-color: hsl(211, 50%, 85%);
   border: 2px solid hsl(211, 50%, 85%);
-  padding: 3px;
+  padding: 2px;
 }
 
 .content-background {
   background-color: hsl(211, 100%, 97%);
+  margin-bottom: 3px;
+  border-radius: 6px;
+  margin-left: 5px;
 }
 
 .event-content {
-  margin: 10px;
-  margin-bottom: 70px;
-  border-radius: 6px;
+  margin: 16px;
 }
 
 .event-title {
@@ -42,6 +44,8 @@
   margin-top: 16px;
   font-size: 16px;
   line-height: 22px;
+  margin-bottom: 96px;
+  max-width: 500px;
 }
 
 .event-metadata {
@@ -49,19 +53,21 @@
   font-size: 14px;
   position: absolute;
   bottom: 0;
-  line-height: 16px;
+  line-height: 20px;
+}
+
+.event-metadata span {
+  color: hsl(211, 25%, 53%);
 }
 
 .event-metadata p {
   margin-bottom: 2px;
 }
 
-.event-metadata span {
-  font-weight: 700;
-}
-
 img {
-  width: 400px;
+  width: 500px;
+  height: 350px;
+  object-fit: cover;
   border-radius: 6px;
 }
 
@@ -70,7 +76,6 @@ img {
   font-weight: 700;
   text-decoration: none;
   padding: 4px 12px 4px 12px;
-  border: 1px solid #333333;
   border-radius: 6px;
   background-color: hsl(0, 99%, 64%);
   color: #ffffff;
