--- a/src/app/activity-page-view/activity-page-view.component.html
+++ b/src/app/activity-page-view/activity-page-view.component.html
@@ -33,46 +33,16 @@
         </div>
         <div class="event-metadata">
           <p>
-            <span>Hours: </span>{{ activity.hourBeginning }} until
-            {{ activity.hourEnding }}
+            <span>Hours: </span>{{ timeFormatter(activity.hourBeginning) }}
+            <span>Until </span>{{ timeFormatter(activity.hourEnding) }}
           </p>
-          <p><span>Starts: </span>{{ activity.dateBeginning }}</p>
-          <p><span>Ends: </span> {{ activity.dateEnding }}</p>
+          <p>
+            <span>Dates: </span>{{ dateFormatter(activity.dateBeginning) }}
+            <span>Thru </span>{{ dateFormatter(activity.dateEnding) }}
+          </p>
         </div>
       </div>
     </div>
+    <app-info-icon-column [activity]="activity"></app-info-icon-column>
   </figure>
-  <form>
-    <legend>Choose Info Badges:</legend>
-    <div>
-      <label for="child_friendly">Child-Friendly</label>
-      <input
-        type="checkbox"
-        name="id"
-        value="{{ 5 }}"
-        (input)="addBadgeToActivity($event)"
-        (change)="removeBadgeFromActivity($event)"
-      />
-    </div>
-    <div>
-      <label for="attach_money">Admission Fee</label>
-      <input
-        type="checkbox"
-        name="id"
-        value="{{ 6 }}"
-        (input)="addBadgeToActivity($event)"
-        (change)="removeBadgeFromActivity($event)"
-      />
-    </div>
-    <div>
-      <label for="no_drinks">Alcohol Prohibited</label>
-      <input
-        type="checkbox"
-        name="id"
-        value="{{ 7 }}"
-        (input)="addBadgeToActivity($event)"
-        (change)="removeBadgeFromActivity($event)"
-      />
-    </div>
-  </form>
 </ng-template>
