--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -17,10 +17,16 @@
   line-height: 25px;
 }
 
-.homepage-container {
+.homepage-main {
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
   margin-top: 96px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  background-color: hsl(211, 100%, 97%);
+  border-radius: 6px;
+  padding: 36px 12px 36px 12px;
 }
 
 .hero-container {
@@ -38,6 +44,7 @@
   margin-left: 6px;
   border-radius: 6px;
   padding: 6px;
+  width: 100%;
   background-color: hsl(211, 100%, 97%);
   height: 100%;
   line-height: 25px;
@@ -71,8 +78,9 @@
 }
 
 img {
-  max-width: 700px;
-  width: 100%;
+  width: 400px;
+  height: 250px;
+  object-fit: cover;
   border-radius: 6px;
 }
 
