--- a/src/app/add-whats-popn/add-whats-popn.component.html
+++ b/src/app/add-whats-popn/add-whats-popn.component.html
@@ -9,138 +9,152 @@
       "
       action="add-whats-popn"
     >
-      <div class="image-description-name">
-        <label for="imageUrl">Upload Image</label><br />
-        <input
-          ngModel
-          type="text"
-          (input)="onSelectFile($event)"
-          name="imageUrl"
-          id="imageUrl"
-        /><br />
-        <img src="{{ imageUrl }}" /><br />
+      <div class="form-top">
+        <div class="top-left">
+          <label for="imageUrl">Upload Image</label><br />
+          <input
+            ngModel
+            type="text"
+            (input)="onSelectFile($event)"
+            name="imageUrl"
+            id="imageUrl"
+          /><br />
+          <img src="{{ imageUrl }}" /><br />
 
-        <label for="name">Activity Name</label><br />
-        <input
-          ngModel
-          type="text"
-          id="name"
-          name="name"
-          [(ngModel)]="$name"
-        /><br />
+          <label for="name">Activity Name</label><br />
+          <input
+            ngModel
+            type="text"
+            id="name"
+            name="name"
+            [(ngModel)]="$name"
+          /><br />
+          <label for="address">Activity Address</label><br />
+          <input
+            ngModel
+            type="text"
+            id="address"
+            name="address"
+            [(ngModel)]="$address"
+          /><br />
+        </div>
+        <div class="top-right">
+          <label for="websiteUrl">Website</label><br />
+          <input
+            ngModel
+            type="text"
+            id="websiteUrl"
+            name="websiteUrl"
+            [(ngModel)]="$websiteUrl"
+          /><br />
+          <div class="hours-dates">
+            <div class="hours">
+              <label for="hourBeginning">Open</label><br />
+              <input
+                ngModel
+                type="time"
+                id="hourBeginning"
+                name="hourBeginning"
+              /><br />
 
-        <label for="description">Description</label><br />
-        <textarea
-          ngModel
-          id="description"
-          name="description"
-          [(ngModel)]="$description"
-        ></textarea
-        ><br />
+              <label for="hourEnding">Closed</label><br />
+              <input
+                ngModel
+                type="time"
+                id="hourEnding"
+                name="hourEnding"
+              /><br />
+            </div>
+            <div class="dates">
+              <label for="dateBeginning">Begins</label><br />
+              <input
+                ngModel
+                type="date"
+                id="dateBeginning"
+                name="dateBeginning"
+              /><br />
+
+              <label for="dateEnding">Ends</label><br />
+              <input
+                ngModel
+                type="date"
+                id="dateEnding"
+                name="dateEnding"
+              /><br />
+            </div>
+          </div>
+          <label for="description">Description</label><br />
+          <textarea
+            ngModel
+            id="description"
+            name="description"
+            [(ngModel)]="$description"
+          ></textarea
+          ><br />
+        </div>
       </div>
-      <div class="secondary-data">
-        <label for="address">Activity Address</label><br />
-        <input
-          ngModel
-          type="text"
-          id="address"
-          name="address"
-          [(ngModel)]="$address"
-        /><br />
-
-        <label for="websiteUrl">Website</label><br />
-        <input
-          ngModel
-          type="text"
-          id="websiteUrl"
-          name="websiteUrl"
-          [(ngModel)]="$websiteUrl"
-        /><br />
-        <div class="hours-dates">
-          <div class="hours">
-            <label for="hourBeginning">Open</label><br />
-            <input
-              ngModel
-              type="time"
-              id="hourBeginning"
-              name="hourBeginning"
-            /><br />
-
-            <label for="hourEnding">Closed</label><br />
-            <input
-              ngModel
-              type="time"
-              id="hourEnding"
-              name="hourEnding"
-            /><br />
-          </div>
-          <div class="dates">
-            <label for="dateBeginning">Begins</label><br />
-            <input
-              ngModel
-              type="date"
-              id="dateBeginning"
-              name="dateBeginning"
-            /><br />
-
-            <label for="dateEnding">Ends</label><br />
-            <input
-              ngModel
-              type="date"
-              id="dateEnding"
-              name="dateEnding"
-            /><br />
-          </div>
-        </div>
-
+      <div class="form-bottom">
         <legend>Choose Info Badges:</legend>
-        <div>
-          <label for="isChildFriendly">Child-Friendly</label>
-          <input
-            ngModel
-            type="checkbox"
-            name="isChildFriendly"
-            id="isChildFriendly"
-          />
-        </div>
-        <div>
-          <label for="isAdmission">Admission Fee</label>
-          <input ngModel type="checkbox" name="isAdmission" id="isAdmission" />
-        </div>
-        <div>
-          <label for="isNoAlcohol">Alcohol Prohibited</label>
-          <input ngModel type="checkbox" name="isNoAlcohol" id="isNoAlcohol" />
-        </div>
-        <div>
-          <label for="isPetFriendly">Pet-Friendly</label>
-          <input
-            ngModel
-            type="checkbox"
-            name="isPetFriendly"
-            id="isPetFriendly"
-          />
-        </div>
-        <div>
-          <label for="isParking">Local Parking</label>
-          <input ngModel type="checkbox" name="isParking" id="isParking" />
-        </div>
-        <div>
-          <label for="isAccessible">Accessible</label>
-          <input
-            ngModel
-            type="checkbox"
-            name="isAccessible"
-            id="isAccessible"
-          />
-        </div>
-        <div>
-          <label for="isWifi">Free Wifi</label>
-          <input ngModel type="checkbox" name="isWifi" id="isWifi" />
-        </div>
-        <div>
-          <label for="isRsvp">RSVP Only</label>
-          <input ngModel type="checkbox" name="isRsvp" id="isRsvp" />
-        </div>
+        <ul class="checkboxes">
+          <li class="option">
+            <label for="isChildFriendly">Child-Friendly</label>
+            <input
+              ngModel
+              type="checkbox"
+              name="isChildFriendly"
+              id="isChildFriendly"
+            />
+          </li>
+          <li class="option">
+            <label for="isAdmission">Admission Fee</label>
+            <input
+              ngModel
+              type="checkbox"
+              name="isAdmission"
+              id="isAdmission"
+            />
+          </li>
+          <li class="option">
+            <label for="isNoAlcohol">Alcohol Prohibited</label>
+            <input
+              ngModel
+              type="checkbox"
+              name="isNoAlcohol"
+              id="isNoAlcohol"
+            />
+          </li>
+          <li class="option">
+            <label for="isPetFriendly">Pet-Friendly</label>
+            <input
+              ngModel
+              type="checkbox"
+              name="isPetFriendly"
+              id="isPetFriendly"
+            />
+          </li>
+          <br />
+          <li class="option">
+            <label for="isParking">Local Parking</label>
+            <input ngModel type="checkbox" name="isParking" id="isParking" />
+          </li>
+          <li class="option">
+            <label for="isAccessible">Accessible</label>
+            <input
+              ngModel
+              type="checkbox"
+              name="isAccessible"
+              id="isAccessible"
+            />
+          </li>
+          <li class="option">
+            <label for="isWifi">Free Wifi</label>
+            <input ngModel type="checkbox" name="isWifi" id="isWifi" />
+          </li>
+          <li class="option">
+            <label for="isRsvp">RSVP Only</label>
+            <input ngModel type="checkbox" name="isRsvp" id="isRsvp" />
+          </li>
+        </ul>
       </div>
       <input class="button" type="submit" value="Submit" />
     </form>
