--- a/src/app/activity-page-view/activity-page-view.component.html
+++ b/src/app/activity-page-view/activity-page-view.component.html
@@ -13,7 +13,9 @@
           <ul>
             <li>
               <a
-                href="https://www.google.com/search?q={{ activity.address }}"
+                href="https://www.google.com/maps/dir/?api=1query={{
+                  activity.name
+                }}+{{ activity.city }}+{{ activity.state }}"
                 target="_blank"
                 class="button"
                 >Directions</a
