--- a/src/app/activity-page-view/activity-page-view.component.css
+++ b/src/app/activity-page-view/activity-page-view.component.css
@@ -2,40 +2,34 @@
   margin-right: auto;
   margin-left: auto;
   max-width: 800px;
-  min-width: 705px;
-  height: auto;
   border-radius: 6px;
   border-right: 4px solid hsl(211, 50%, 85%);
   border-bottom: 4px solid hsl(211, 50%, 85%);
   background-color: hsl(211, 100%, 97%);
-  padding-bottom: 4px;
-  padding-right: 4px;
 }
 
 .grid-container {
-  margin: 12px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  column-gap: 10px;
-  row-gap: 10px;
-  padding: 12px 12px;
+  grid-template-columns: repeat(2);
+  grid-template-rows: repeat(2);
+  column-gap: 24px;
+  row-gap: 24px;
+  padding: 24px 24px;
 }
 
 .grid-1 {
-  grid-column: 1 / span 2;
-  grid-row: 1 / span 2;
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
 }
 .grid-2 {
-  grid-column: 3 / span 1;
-  grid-row: 1 / span 2;
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
   position: relative;
-  padding-top: 8px;
 }
 
 .grid-3 {
-  grid-column: 1 / span 3;
-  grid-row: 3 / span 1;
+  grid-column: 1 / span 2;
+  grid-row: 2 / span 1;
 }
 
 .event-title {
@@ -61,10 +55,12 @@ h2 {
 
 .event-description {
   margin-top: 16px;
+  padding-top: 8px;
   font-size: 16px;
   line-height: 22px;
   margin-bottom: 96px;
   max-width: 500px;
+  border-top: 2px solid hsl(211, 50%, 85%);
 }
 
 .event-metadata {
