--- a/src/app/activity-listing/activity-listing.component.html
+++ b/src/app/activity-listing/activity-listing.component.html
@@ -19,6 +19,10 @@
             <span>Thru </span>{{ dateFormatter(activity.dateEnding) }}
           </p>
         </div>
+        <div class="location">
+          <p>{{ activity.city }},</p>
+          <p>{{ activity.state }}</p>
+        </div>
       </div>
     </figure>
   </div>
