--- a/src/app/activity-page-view/activity-page-view.component.css
+++ b/src/app/activity-page-view/activity-page-view.component.css
@@ -1,7 +1,7 @@
 .event {
   margin-right: auto;
   margin-left: auto;
-  max-width: 800px;
+  max-width: 900px;
   border-radius: 6px;
   border-right: 4px solid hsl(211, 50%, 85%);
   border-bottom: 4px solid hsl(211, 50%, 85%);
@@ -12,8 +12,8 @@
   display: grid;
   grid-template-columns: repeat(2);
   grid-template-rows: repeat(2);
-  column-gap: 24px;
-  row-gap: 24px;
+  column-gap: 18px;
+  row-gap: 18px;
   padding: 24px 24px;
 }
 
@@ -25,11 +25,22 @@
   grid-column: 2 / span 1;
   grid-row: 1 / span 1;
   position: relative;
+  width: 240px;
 }
 
 .grid-3 {
-  grid-column: 1 / span 2;
+  grid-column: 2 / span 1;
   grid-row: 2 / span 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.grid-4 {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+  width: 450px;
+  height: fit-content;
 }
 
 .event-title {
@@ -65,7 +76,7 @@ h2 {
 
 .event-metadata {
   position: absolute;
-  margin-bottom: 48px;
+  margin-bottom: 24px;
   font-size: 14px;
   bottom: 0;
   line-height: 20px;
@@ -76,8 +87,8 @@ h2 {
 }
 
 img {
-  max-width: 400px;
-  height: 275px;
+  width: 450px;
+  height: 270px;
   object-fit: cover;
   border-radius: 6px;
 }
